# Ochi

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO-REPORT.md  Dockerfile  GPU-ACTIVATION.md  LICENSE  LICENSE.md  MIGRATION-CANDLE-OLLAMA.md  MIGRATION.md  PLAN-TASK.md  QUICKSTART.md  README.md  REQUIREMENTS.md  SECURITY.md  SETUP-AUTO.md  SETUP-CUDA.md  SETUP.bat  SETUP.md  SETUP.ps1  START-HERE.md  SUB-PLAN-TASK.md  TEST-RESULTS.md  USAGE-AI.md  docker-compose.yml  download-model.bat  enable-gpu.bat  enable-gpu.sh  ochi.toml.example  test_write.txt
.github/: copilot-instructions.md
config/: ochi.toml
crates/ochi-api/: Cargo.toml
crates/ochi-api/src/: channel_bridge.rs  lib.rs  middleware.rs  openai_compat.rs  routes.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/ochi-api/static/: index_body.html  index_head.html
crates/ochi-api/static/js/: api.js  app.js
crates/ochi-api/static/js/pages/: agents.js  approvals.js  channels.js  chat.js  hands.js  logs.js  overview.js  scheduler.js  sessions.js  settings.js  skills.js  usage.js  wizard.js  workflow-builder.js  workflows.js
crates/ochi-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/ochi-cli/: Cargo.toml
crates/ochi-cli/src/: bundled_agents.rs  dotenv.rs  launcher.rs  main.rs  mcp.rs  ochi.rs  ochi_orchestrator.rs  templates.rs  ui.rs
crates/ochi-cli/src/tui/: chat_runner.rs  event.rs  mod.rs  theme.rs
crates/ochi-cli/src/tui/screens/: agents.rs  audit.rs  chat.rs  dashboard.rs  extensions.rs  hands.rs  init_wizard.rs  logs.rs  memory.rs  peers.rs  sessions.rs  settings.rs  skills.rs  templates.rs  triggers.rs  usage.rs  welcome.rs  wizard.rs  workflows.rs
crates/ochi-core/: Cargo.toml
crates/ochi-core/examples/: chat_demo.rs  demo_qwen3_5.rs  test_gpu_real.rs  test_ochi_core.rs  test_vietnamese_loop.rs
crates/ochi-core/src/: error.rs  lib.rs  test_utils.rs  utils.rs
crates/ochi-core/src/ai/: auto_config.rs  ffi.rs  loop_detector.rs  mod.rs  model.rs
crates/ochi-core/src/ai/ollama/: client.rs
crates/ochi-core/src/hardware/: detector.rs  mod.rs  tuner.rs
crates/ochi-gateway/: Cargo.toml
crates/ochi-gateway/src/: lib.rs
crates/ochi-hands/: Cargo.toml
crates/ochi-hands/bundled/browser/: SKILL.md
crates/ochi-hands/bundled/infra/: HAND.toml  SKILL.md
crates/ochi-hands/bundled/logic/: HAND.toml  SKILL.md
crates/ochi-hands/bundled/twitter/: HAND.toml
crates/ochi-hands/src/: bundled.rs  lib.rs  registry.rs
crates/ochi-kernel/: Cargo.toml
crates/ochi-kernel/src/: approval.rs  auth.rs  auto_reply.rs  background.rs  capabilities.rs  config.rs  config_reload.rs  cron.rs  error.rs  event_bus.rs  heartbeat.rs  kernel.rs  lib.rs  metering.rs  orchestration.rs  pairing.rs  registry.rs  scheduler.rs  supervisor.rs  triggers.rs  whatsapp_gateway.rs  wizard.rs  workflow.rs
crates/ochi-kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/ochi-llm/: Cargo.toml
crates/ochi-llm/examples/: basic-chat.rs  candle-demo.rs  multi-model.rs  ollama_autotune.rs  streaming.rs
crates/ochi-llm/src/: lib.rs
crates/ochi-llm/src/ai/: auto_config.rs  mod.rs  model.rs
crates/ochi-llm/src/ai/ollama/: auto_tune.rs  client.rs  mod.rs
crates/ochi-llm/tests/: ollama_live.rs
crates/ochi-memory/: Cargo.toml
crates/ochi-memory/src/: consolidation.rs  knowledge.rs  lib.rs  semantic.rs  session.rs  structured.rs  substrate.rs  usage.rs
crates/ochi-migrate/: Cargo.toml
crates/ochi-migrate/src/: lib.rs  openclaw.rs  report.rs
crates/ochi-ngu-hanh/: Cargo.toml
crates/ochi-ngu-hanh/src/: db.rs  embedding.rs  hoa.rs  kim.rs  lib.rs  moc.rs  tho.rs  thuy.rs
crates/ochi-runtime/: Cargo.toml
crates/ochi-runtime/src/: a2a.rs  agent_loop.rs  apply_patch.rs  audit.rs  auth_cooldown.rs  browser.rs  browser_bridge.py  compactor.rs  context_budget.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  graceful_shutdown.rs  hooks.rs  host_functions.rs  image_gen.rs  kernel_handle.rs  lib.rs  link_understanding.rs  llm_driver.rs  llm_errors.rs  manus.rs  mcp.rs  mcp_server.rs  media_understanding.rs  model_catalog.rs  prompt_builder.rs  python_runtime.rs  retry.rs  routing.rs  sandbox.rs  session_repair.rs  subprocess_sandbox.rs  tool_runner.rs  tts.rs  web_fetch.rs  web_search.rs  wit.rs  workspace_context.rs
crates/ochi-runtime/src/drivers/: anthropic.rs  claude_code.rs  copilot.rs  fallback.rs  gemini.rs  mod.rs  openai.rs
crates/ochi-skills/: Cargo.toml
crates/ochi-skills/src/: bundled.rs  clawhub.rs  lib.rs  marketplace.rs  openclaw_compat.rs  registry.rs
crates/ochi-trung-cung/: Cargo.toml
crates/ochi-trung-cung/src/: am_duong.rs  lib.rs  nlp.rs  qwen_code.rs
crates/ochi-trung-cung/src/bat_quai/: can.rs  can_gua.rs  chan.rs  doai.rs  go_agents.rs  kham.rs  khon.rs  ly.rs  mod.rs  ton.rs
crates/ochi-trung-cung/src/storage/: duckdb.rs  mod.rs
crates/openfang-skills/: Cargo.toml
deploy/: ochi.service  openfang.service
docs/: AUTO-DETECT-FAILOVER-RECAP.md  EDIT-VALIDATION-FIX.md  GO-EXAMPLE.md  LLM-SETUP.md  OCHI-CLI-OLLAMA.md  OCHI-CLI-QUICKSTART.md  QWEN-CODE-INTEGRATION.md  README.md  TEST-REPORT-0.4.0.md  TEST-RESULTS-FINAL.md  TESTING.md  WEBUI-PLAN.md  agent-self-protection.md  agent-templates.md  api-reference.md  architecture.md  channel-adapters.md  cli-reference.md  configuration.md  consolidated_plan.md  defensive-deterrence-standard.md  desktop.md  domain-setup.md  getting-started.md  gguf-models.md  hyperledger-fabric-policy.md  launch-roadmap.md  mcp-a2a.md  ochi-brand-roadmap.md  ochi-full-rename-checklist.md  production-checklist.md  providers.md  repo-audit-5w1h.md  rust2go.md  sdk-migration.md  security.md  skill-development.md  troubleshooting.md  workflows.md
examples/: candle-demo.rs  demo.rs  qwen-auto-test.rs  test_ochi_core.rs
prompts/: agent.system.main.solving.md
scripts/: SYNC-GUIDE.md  auto-commit.bat  build.bat  download-model.bat  gen-ssh.bat  install-all.bat  install-manual.bat  (+15 more)
(+208 files in other folders)
