[workspace]
resolver = "2"

members = [
    "crates/ochi-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ochi Team"]
license = "MIT"
repository = "https://github.com/ochi-next/ochi"
homepage = "https://ochi.dev"

[workspace.dependencies]
# Core
ochi-core = { path = "crates/ochi-core" }

# Async & Runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP & API
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "sqlite"] }
redis = "0.24"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# AI/ML - GGUF Inference
llama_cpp_rs = "0.3"
candle-core = "0.8"
candle-nn = "0.8"

# Hardware Detection
nvml-wrapper = "0.10"
num_cpus = "1.16"
sysinfo = "0.32"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
