[package]
name = "ochi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the Ochi Agent OS"

[[bin]]
name = "ochi"
path = "src/main.rs"

[[bin]]
name = "ochi-legacy"
path = "src/ochi.rs"

[dependencies]
ochi-types = { path = "../ochi-types" }
ochi-kernel = { path = "../ochi-kernel" }
ochi-api = { path = "../ochi-api" }
ochi-migrate = { path = "../ochi-migrate" }
ochi-skills = { path = "../ochi-skills" }
ochi-extensions = { path = "../ochi-extensions" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
ochi-runtime = { path = "../ochi-runtime" }
uuid = { workspace = true }
ratatui = { workspace = true }
colored = { workspace = true }
