[package]
name = "ochi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core functionality for Ochi Next"

[dependencies]
# External dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

# AI/ML - Candle (Pure Rust)
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true

# Ollama - Easy model switching
ollama-rs = { version = "0.2", optional = true }

# Hardware Detection
num_cpus.workspace = true
sysinfo.workspace = true

[features]
default = []
ollama = ["ollama-rs"]
