[package]
name = "ochi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core functionality for Ochi Next"

[dependencies]
# External dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

# Hardware Detection
num_cpus.workspace = true
sysinfo.workspace = true
