[package]
name = "ochi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core functionality for Ochi Next"

[dependencies]
# External dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Hardware Detection
num_cpus.workspace = true
sysinfo.workspace = true

# Database (re-exported for agents)
rusqlite = { version = "0.31", features = ["bundled"] }
