[package]
name = "ochi-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Gateway/API routing layer for Ochi"

[dependencies]
ochi-core = { path = "../ochi-core" }
ochi-runtime = { path = "../ochi-runtime" }
ochi-trung-cung = { path = "../ochi-trung-cung", default-features = false }

[features]
default = []
# duckdb = ["ochi-runtime/duckdb", "ochi-trung-cung/duckdb"]
