[package]
name = "ochi-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Gateway/API routing layer for Ochi"

[[bin]]
name = "ochi"
path = "src/bin/ochi.rs"

[[bin]]
name = "ochi-load-kb"
path = "src/bin/ochi-load-kb.rs"

[[bin]]
name = "ochi-test-nlp"
path = "src/bin/ochi-test-nlp.rs"

[dependencies]
ochi-core = { path = "../ochi-core" }
ochi-runtime = { path = "../ochi-runtime" }
ochi-trung-cung = { path = "../ochi-trung-cung", default-features = false }
ochi-automation = { path = "../ochi-automation" }
ochi-ngu-hanh = { path = "../ochi-ngu-hanh" }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
crossterm = "0.27"

# HTTP & API
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
