[package]
name = "ochi-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the Ochi Agent OS"

[dependencies]
openfang-types = { package = "ochi-types", path = "../ochi-types" }
ochi-memory = { path = "../ochi-memory" }
ochi-runtime = { path = "../ochi-runtime" }
ochi-skills = { path = "../ochi-skills" }
ochi-hands = { path = "../ochi-hands" }
ochi-extensions = { path = "../ochi-extensions" }
ochi-wire = { path = "../ochi-wire" }
ochi-channels = { path = "../ochi-channels" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
