[package]
name = "ochi-ngu-hanh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ngu Hanh agents and SQLite data access for Ochi"

[dependencies]
ochi-core = { path = "../ochi-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }


[dev-dependencies]
tempfile = "3.10"
